const Rol = require('./Rol');

class Autor extends Rol {
}

module.exports = Autor;