const Rol = require('./Rol');

class Chair extends Rol {
}

module.exports = Chair;