class EstrategiaSeleccion {
  seleccionarArticulos(articulos) {
    throw new Error("Método no implementado.");
  }
}
module.exports = EstrategiaSeleccion;