class Revision {
    constructor(revisor, articulo, calificacion, comentario) {
      this.revisor = revisor;
      this.articulo = articulo;
      this.calificacion = calificacion;
      this.comentario = comentario;
    }
}

module.exports = Revision;