const Rol = require('./Rol');

class Revisor extends Rol {
}

module.exports = Revisor;