class Rol {
}

module.exports = Rol;